Changed Fixed Sidebar template to Fixed Footer template

--- a/EasyCashIdentityProject.PresentationLayer/Views/Shared/Components/_CustomerLayoutHeaderPartial/Default.cshtml
+++ b/EasyCashIdentityProject.PresentationLayer/Views/Shared/Components/_CustomerLayoutHeaderPartial/Default.cshtml
@@ -20,4 +20,4 @@
 
     <!-- Custom Theme Style -->
     <link href="~/gentela-gh-pages/build/css/custom.min.css" rel="stylesheet">
-</head>s
+</head>
