--- a/EasyCashIdentityProject.PresentationLayer/Views/MyProfile/Index.cshtml
+++ b/EasyCashIdentityProject.PresentationLayer/Views/MyProfile/Index.cshtml
@@ -3,14 +3,16 @@
     Layout = null;
 }
 
+
 <!DOCTYPE html>
 <html lang="en">
 
 @await Component.InvokeAsync("_CustomerLayoutHeaderPartial")
 
-<body class="nav-md">
+<body class="nav-md footer_fixed">
     <div class="container body">
         <div class="main_container">
+
             @await Component.InvokeAsync("_CustomerLayoutSidebarPartial")
 
             <!-- top navigation -->
@@ -21,7 +23,7 @@
                 <div class="">
                     <div class="page-title">
                         <div class="title_left">
-                            <h3>Fixed Sidebar <small> Just add class <strong>menu_fixed</strong></small></h3>
+                            <h3>Fixed Footer <small> Just add class <strong>footer_fixed</strong></small></h3>
                         </div>
                     </div>
                 </div>
@@ -32,7 +34,7 @@
             <!-- /footer content -->
         </div>
     </div>
-    
+
     @await Component.InvokeAsync("_CustomerLayoutScriptPartial")
 </body>
 </html>
