--- a/EasyCashIdentityProject.PresentationLayer/Views/MyProfile/Index.cshtml
+++ b/EasyCashIdentityProject.PresentationLayer/Views/MyProfile/Index.cshtml
@@ -23,7 +23,7 @@
                 <div class="">
                     <div class="page-title">
                         <div class="title_left">
-                            <h3>Fixed Footer <small> Just add class <strong>footer_fixed</strong></small></h3>
+                            @RenderBody()
                         </div>
                     </div>
                 </div>
