--- a/EasyCashIdentityProject.PresentationLayer/Views/Shared/Components/_CustomerLayoutFooterPartial/Default.cshtml
+++ b/EasyCashIdentityProject.PresentationLayer/Views/Shared/Components/_CustomerLayoutFooterPartial/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿
 <footer>
     <div class="pull-right">
-        Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com">Colorlib</a>
+       Easy Cash Müştəri Paneli @DateTime.Now.Year | Bütün Hüquqlar Qorunur
     </div>
     <div class="clearfix"></div>
 </footer>
