--- a/EasyCashIdentityProject.PresentationLayer/Views/Shared/Components/_CustomerLayoutSidebarPartial/Default.cshtml
+++ b/EasyCashIdentityProject.PresentationLayer/Views/Shared/Components/_CustomerLayoutSidebarPartial/Default.cshtml
@@ -2,7 +2,7 @@
 <div class="col-md-3 left_col">
     <div class="left_col scroll-view">
         <div class="navbar nav_title" style="border: 0;">
-            <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Gentelella Alela!</span></a>
+            <a href="index.html" class="site_title"><i class="fa fa-space-shuttle"></i> <span>Easy Cash</span></a>
         </div>
 
         <div class="clearfix"></div>
@@ -13,8 +13,8 @@
                 <img src="~/gentela-gh-pages/production/images/img.jpg" alt="..." class="img-circle profile_img">
             </div>
             <div class="profile_info">
-                <span>Welcome,</span>
-                <h2>John Doe</h2>
+                <span>Xoş geldiniz,</span>
+                <h2>Müştəri X</h2>
             </div>
         </div>
         <!-- /menu profile quick info -->
@@ -24,63 +24,63 @@
         <!-- sidebar menu -->
         <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
             <div class="menu_section">
-                <h3>General</h3>
+                <h3>Menülər</h3>
                 <ul class="nav side-menu">
                     <li>
-                        <a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
+                        <a><i class="fa fa-home"></i> Ana Səhifə <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
                             <li><a href="index.html">Dashboard</a></li>
-                            <li><a href="index2.html">Dashboard2</a></li>
-                            <li><a href="index3.html">Dashboard3</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a><i class="fa fa-edit"></i> Forms <span class="fa fa-chevron-down"></span></a>
+                        <a><i class="fa fa-edit"></i> Hesab Əməliyyatları <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                            <li><a href="form.html">General Form</a></li>
-                            <li><a href="form_advanced.html">Advanced Components</a></li>
-                            <li><a href="form_validation.html">Form Validation</a></li>
-                            <li><a href="form_wizards.html">Form Wizard</a></li>
-                            <li><a href="form_upload.html">Form Upload</a></li>
-                            <li><a href="form_buttons.html">Form Buttons</a></li>
+                            <li><a href="form.html">Pul Köçürməsi</a></li>
+                            <li><a href="form_advanced.html">Son Əməliyyatlarım</a></li>
+                            <li><a href="form_validation.html">QR ilə Pul Göndər</a></li>
+                            <li><a href="form_wizards.html">İban Məlumatı Paylaş</a></li>
+                            <li><a href="form_upload.html">Hesablarım Arasında Köçürmə</a></li>
+                            <li><a href="form_buttons.html">Mobil Telefon Köçürməsi</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a><i class="fa fa-desktop"></i> UI Elements <span class="fa fa-chevron-down"></span></a>
+                        <a><i class="fa fa-briefcase"></i> Hesablarım <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                            <li><a href="general_elements.html">General Elements</a></li>
-                            <li><a href="media_gallery.html">Media Gallery</a></li>
-                            <li><a href="typography.html">Typography</a></li>
-                            <li><a href="icons.html">Icons</a></li>
-                            <li><a href="glyphicons.html">Glyphicons</a></li>
-                            <li><a href="widgets.html">Widgets</a></li>
-                            <li><a href="invoice.html">Invoice</a></li>
-                            <li><a href="inbox.html">Inbox</a></li>
-                            <li><a href="calendar.html">Calendar</a></li>
+                            <li><a href="general_elements.html">Bütün Hesablarım</a></li>
+                            <li><a href="media_gallery.html">Yeni Hesab Aç</a></li>
+                            <li><a href="typography.html">Cari Hesablar</a></li>
+                            <li><a href="icons.html">Müddətli Hesab</a></li>
+                            <li><a href="glyphicons.html">Qızıl Hesablarım</a></li>
+                            <li><a href="widgets.html">Kredit Hesablarım</a></li>
+                            <li><a href="invoice.html">Dollar Hesablarım</a></li>
+                            <li><a href="inbox.html">Euro Hesablarım</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a><i class="fa fa-table"></i> Tables <span class="fa fa-chevron-down"></span></a>
+                        <a><i class="fa fa-calculator"></i> Ödəmələr <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                            <li><a href="tables.html">Tables</a></li>
-                            <li><a href="tables_dynamic.html">Table Dynamic</a></li>
+                            <li><a href="tables.html">Kommunal Ödəmə</a></li>
+                            <li><a href="tables_dynamic.html">Təhsil Ödəmələri</a></li>
+                            <li><a href="tables_dynamic.html">Nəqliyyat Ödəmələri</a></li>
+                            <li><a href="tables_dynamic.html">Sınaq Ödəmələri</a></li>
+                            <li><a href="tables_dynamic.html">Sığorta Ödəmələri</a></li>
+                            <li><a href="tables_dynamic.html">Digər Ödəmələr</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a><i class="fa fa-bar-chart-o"></i> Data Presentation <span class="fa fa-chevron-down"></span></a>
+                        <a><i class="fa fa-money"></i> Valyuta və Qızıl <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                            <li><a href="chartjs.html">Chart JS</a></li>
-                            <li><a href="chartjs2.html">Chart JS2</a></li>
-                            <li><a href="morisjs.html">Moris JS</a></li>
-                            <li><a href="echarts.html">ECharts</a></li>
-                            <li><a href="other_charts.html">Other Charts</a></li>
+                            <li><a href="chartjs.html">Valyuta Məzənnələri</a></li>
+                            <li><a href="chartjs2.html">Valyuta Əməliyyatları</a></li>
+                            <li><a href="morisjs.html">Qızıl Əməliyyatları</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a><i class="fa fa-clone"></i>Layouts <span class="fa fa-chevron-down"></span></a>
+                        <a><i class="fa fa-file-text"></i>Kreditlər <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                            <li><a href="fixed_sidebar.html">Fixed Sidebar</a></li>
-                            <li><a href="fixed_footer.html">Fixed Footer</a></li>
+                            <li><a href="fixed_sidebar.html">Kredit Hesablarım</a></li>
+                            <li><a href="fixed_footer.html">Kredit Müraciəti</a></li>
+                            <li><a href="fixed_footer.html">Kredit Ödənişləri</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -89,50 +89,22 @@
                 <h3>Live On</h3>
                 <ul class="nav side-menu">
                     <li>
-                        <a><i class="fa fa-bug"></i> Additional Pages <span class="fa fa-chevron-down"></span></a>
+                        <a><i class="fa fa-credit-card"></i> Kartlarım <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                            <li><a href="e_commerce.html">E-commerce</a></li>
-                            <li><a href="projects.html">Projects</a></li>
-                            <li><a href="project_detail.html">Project Detail</a></li>
-                            <li><a href="contacts.html">Contacts</a></li>
-                            <li><a href="profile.html">Profile</a></li>
+                            <li><a href="e_commerce.html">Kredit Kartlarım</a></li>
+                            <li><a href="projects.html">Bank Kartlarım</a></li>
+                            <li><a href="project_detail.html">Virtual Kartlarım</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a><i class="fa fa-windows"></i> Extras <span class="fa fa-chevron-down"></span></a>
+                        <a><i class="fa fa-cog"></i> Tənzimləmələr <span class="fa fa-chevron-down"></span></a>
                         <ul class="nav child_menu">
-                            <li><a href="page_403.html">403 Error</a></li>
-                            <li><a href="page_404.html">404 Error</a></li>
-                            <li><a href="page_500.html">500 Error</a></li>
-                            <li><a href="plain_page.html">Plain Page</a></li>
-                            <li><a href="login.html">Login Page</a></li>
-                            <li><a href="pricing_tables.html">Pricing Tables</a></li>
+                            <li><a href="page_403.html">Profil Məlumatları</a></li>
+                            <li><a href="page_404.html">Şifrə Dəyişdirmə</a></li>
+                            <li><a href="page_500.html">Əlaqə Məlumatları</a></li>
                         </ul>
                     </li>
-                    <li>
-                        <a><i class="fa fa-sitemap"></i> Multilevel Menu <span class="fa fa-chevron-down"></span></a>
-                        <ul class="nav child_menu">
-                            <li><a href="#level1_1">Level One</a>
-                            <li>
-                                <a>Level One<span class="fa fa-chevron-down"></span></a>
-                                <ul class="nav child_menu">
-                                    <li class="sub_menu">
-                                        <a href="level2.html">Level Two</a>
-                                    </li>
-                                    <li>
-                                        <a href="#level2_1">Level Two</a>
-                                    </li>
-                                    <li>
-                                        <a href="#level2_2">Level Two</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#level1_2">Level One</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li><a href="javascript:void(0)"><i class="fa fa-laptop"></i> Landing Page <span class="label label-success pull-right">Coming Soon</span></a></li>
+                    <li><a href="javascript:void(0)"><i class="fa fa-sign-out"></i> Çıxış </a></li>
                 </ul>
             </div>
 
