--- a/EasyCashIdentityProject.PresentationLayer/Views/MyAccounts/Index.cshtml
+++ b/EasyCashIdentityProject.PresentationLayer/Views/MyAccounts/Index.cshtml
@@ -1,8 +1,138 @@
-﻿
+﻿@model EasyCashIdentityProject.DtoLayer.Dtos.AppUserDtos.AppUserEditDto
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/MyProfile/Index.cshtml";
+    Layout = "~/Views/CustomerLayout/Index.cshtml";
 }
 
-<h2>Index</h2>
+
+<div class="right_col" role="main">
+    <div class="">
+        <div class="page-title">
+            <div class="title_left">
+                <h3>Easy Cash Müştəri Paneli</h3>
+            </div>
+
+            <div class="title_right">
+                <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="axtarılacaq sözləri daxil edin...">
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" type="button">Axtar!</button>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="clearfix"></div>
+
+        <div class="row">
+            <div class="col-md-12 col-sm-12 col-xs-12">
+                <div class="x_panel">
+                    <div class="x_title">
+                        <h2>Easy Cash <small>Profil Məlumatları Redaktə Etmə Səhifəsi</small></h2>
+                        <ul class="nav navbar-right panel_toolbox">
+                            <li>
+                                <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                            </li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li>
+                                        <a href="#">Settings 1</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Settings 2</a>
+                                    </li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a class="close-link"><i class="fa fa-close"></i></a>
+                            </li>
+                        </ul>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="x_content">
+
+                        <form class="form-horizontal form-label-left" method="post" novalidate>
+
+                            <p>
+                                Əlaqə və digər məlumatlarınızı aşağıdan düzəldə bilərsiniz.
+                            </p>
+                            <span class="section">Müştəri Məlumatları</span>
+
+                            <div class="item form-group">
+                                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">
+                                    Ad <span class="required">*</span>
+                                </label>
+                                <div class="col-md-6 col-sm-6 col-xs-12">
+                                    <input id="name" class="form-control col-md-7 col-xs-12" asp-for="Name" required="required" data-validate-length-range="3" type="text">
+                                </div>
+                            </div>
+                            <div class="item form-group">
+                                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="surname">
+                                    Soyad <span class="required">*</span>
+                                </label>
+                                <div class="col-md-6 col-sm-6 col-xs-12">
+                                    <input type="text" id="surname" asp-for="Surname" required="required" data-validate-length-range="3" class="form-control col-md-7 col-xs-12">
+                                </div>
+                            </div>
+                            <div class="item form-group">
+                                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="district">
+                                    Rayon <span class="required">*</span>
+                                </label>
+                                <div class="col-md-6 col-sm-6 col-xs-12">
+                                    <input type="text" id="district" asp-for="District" required="required" class="form-control col-md-7 col-xs-12">
+                                </div>
+                            </div>
+                            <div class="item form-group">
+                                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="city">
+                                    Şəhər <span class="required">*</span>
+                                </label>
+                                <div class="col-md-6 col-sm-6 col-xs-12">
+                                    <input type="text" id="city" asp-for="City" required="required" class="form-control col-md-7 col-xs-12">
+                                </div>
+                            </div>
+                            <div class="item form-group">
+                                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="hhoneNumber">
+                                    Telefon Nömrəsi <span class="required">*</span>
+                                </label>
+                                <div class="col-md-6 col-sm-6 col-xs-12">
+                                    <input type="text" id="phoneNumber" asp-for="PhoneNumber" required="required" class="form-control col-md-7 col-xs-12">
+                                </div>
+                            </div>
+                            <div class="item form-group">
+                                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="email">
+                                    E-Poçt Ünvanı <span class="required">*</span>
+                                </label>
+                                <div class="col-md-6 col-sm-6 col-xs-12">
+                                    <input type="email" id="email" asp-for="Email" data-validate-linked="email" required="required" class="form-control col-md-7 col-xs-12">
+                                </div>
+                            </div>
+                            <div class="item form-group">
+                                <label for="password" class="control-label col-md-3">Şifrəniz</label>
+                                <div class="col-md-6 col-sm-6 col-xs-12">
+                                    <input id="password" type="password" asp-for="Password" class="form-control col-md-7 col-xs-12" required="required">
+                                </div>
+                            </div>
+                            <div class="item form-group">
+                                <label for="password2" class="control-label col-md-3 col-sm-3 col-xs-12">Şifrə Təkrarı</label>
+                                <div class="col-md-6 col-sm-6 col-xs-12">
+                                    <input id="password2" type="password" asp-for="Password" class="form-control col-md-7 col-xs-12" required="required">
+                                </div>
+                            </div>
+
+                            <div class="ln_solid"></div>
+                            <div class="form-group">
+                                <div class="col-md-6 col-md-offset-3">
+                                    <button type="submit" class="btn btn-primary">Ləğv Et</button>
+                                    <button id="send" type="submit" class="btn btn-success">Məlumatları Yenilə</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
