Added Customer Realation and User Edit Done

--- a/EasyCashIdentityProject.PresentationLayer/Views/MyAccounts/Index.cshtml
+++ b/EasyCashIdentityProject.PresentationLayer/Views/MyAccounts/Index.cshtml
@@ -117,7 +117,7 @@
                             <div class="item form-group">
                                 <label for="password2" class="control-label col-md-3 col-sm-3 col-xs-12">Şifrə Təkrarı</label>
                                 <div class="col-md-6 col-sm-6 col-xs-12">
-                                    <input id="password2" type="password" asp-for="Password" class="form-control col-md-7 col-xs-12" required="required">
+                                    <input id="password2" type="password" asp-for="ConfirmPassword" class="form-control col-md-7 col-xs-12" required="required">
                                 </div>
                             </div>
 
